<resources>
    <string name="campus_expenses_management">Tacos</string>
    <string name="notification">notification</string>
    <string name="app_name">TACOS</string>
    <string name="user_name">User Name</string>
    <string name="cash">Cash</string>
    <string name="account_balance">Account balance</string>
    <string name="balance">Balance</string>
    <string name="report_this_month">Report this month</string>
    <string name="total_spent">Total spent</string>
    <string name="total_income">Total income</string>
    <string name="top_spending_of_this_week">This week</string>
    <string name="tuition">Tuition</string>
    <string name="rent">Rent</string>
    <string name="food">Food</string>
    <string name="top_spending_of_this_month">This month</string>
    <string name="top_spending_of_this_year">This year</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="salary">Salary</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="add">Add</string>
    <string name="budgets">Budgets</string>
    <string name="profile">Profile</string>
    <string name="amount_total_balance">$ 0.00</string>
    <string name="amount_spent_transactions">$ 0.00</string>
    <string name="coffee">Coffee</string>
    <string name="electricity">Electricity</string>
    <string name="water">Water</string>
    <string name="amount_total_budgets">$ 0.00</string>
    <string name="total_budgets">Total budgets</string>
    <string name="total_budgets_paid">Total spent</string>
    <string name="amount_total_spent">$ 0.00</string>
    <string name="remaining_budgets">Remaining budgets</string>
    <string name="amount_remaining_budgets">$ 0.00</string>
    <string name="amount_cash">$ 0.00</string>
    <string name="amount_account_balance">$ 0.00</string>
    <string name="income">Income</string>
    <string name="amount_income">$ 0.00</string>
    <string name="amount_expense">$ 0.00</string>
    <string name="expense">Expense</string>
    <string name="overview_budget">Overview budget</string>
    <string name="create_budget">Create budget</string>
    <string name="days_end_of_mont">0 days left</string>
    <string name="end_of_month">End of month</string>
    <string name="top_expenses">Top expenses</string>
    <string name="phone">Phone</string>
    <string name="passcode">Passcode</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_passcode">Passcode (6 digits)</string>
    <string name="confirm_passcode">Passcode confirm</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="total_spent_month">$ 0.00</string>
    <string name="total_income_month">$ 0.00</string>
    <string name="top_1_spending">Top 1 spending</string>
    <string name="top_2_spending">Top 2 spending</string>
    <string name="top1_spending_amount_week">$ 0.00</string>
    <string name="top2_spending_amount_week">$ 0.00</string>
    <string name="tv_top3_spending_amount_week">$ 0.00</string>
    <string name="top_3_spending">Top 3 spending</string>
    <string name="top1_spending_amount_month">$ 0.00</string>
    <string name="top2_spending_amount_month">$ 0.00</string>
    <string name="top3_spending_amount_month">$ 0.00</string>
    <string name="top3_spending_amount_year">$ 0.00</string>
    <string name="top2_spending_amount_year">$ 0.00</string>
    <string name="top1_spending_amount_year">$ 0.00</string>
    <string name="recent_transaction_1_amount">$ 0.00</string>
    <string name="recent_transaction_2_amount">$ 0.00</string>
    <string name="recent_transaction_3_amount">$ 0.00</string>
    <string name="no_transactions_available">No transactions available.</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="select_category">Select category</string>
    <string name="amount">Amount</string>
    <string name="to_clear_amount">To clear amount</string>
    <string name="to_extend_category">To extend category</string>
    <string name="icon_calendar">Icon of calendar</string>
    <string name="icon_of_category">Icon of category</string>
    <string name="icon_of_amount">Icon of amount</string>
    <string name="category_name">Category name</string>
    <string name="create">Create</string>
    <string name="to_open_create_category_form">To open create category form</string>
    <string name="to_close_create_category_form">To close create category form</string>
    <string name="reset">Reset</string>
    <string name="icon_of_current_balance">Icon of current balance</string>
    <string name="icon_of_budget">Icon of budget</string>
    <string name="no_budgets">No budgets</string>
    <string name="to_edit">To edit</string>
    <string name="to_delete">To delete</string>
    <string name="transaction_time">Transaction time</string>
    <string name="hh_mm">hh:mm</string>
    <string name="frequency">Frequency</string>
    <string name="creation_date">Creation date</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="settlement_date">Settlement date</string>
    <string name="time_remaining">Time remaining</string>
    <string name="to_settle">To settle</string>
    <string name="avatar_username">Avatar username</string>
    <string name="active_date">0 day</string>
    <string name="icon_of_phone">Icon of phone</string>
    <string name="phone_number">0xxxxxxxxx</string>
    <string name="icon_of_expense">Icon of expense</string>
    <string name="icon_of_income">Icon of income</string>
    <string name="icon_of_transaction_count">Icon of transaction count</string>
    <string name="total_transaction_count">Total transaction count</string>
    <string name="number">0</string>
    <string name="icon_of_transaction_expense_count">Icon of transaction expense count</string>
    <string name="icon_of_transaction_income_count">Icon of transaction income count</string>
    <string name="change_passcode">Change passcode</string>
    <string name="account">Account</string>
    <string name="total_amount_expense">Total amount expense</string>
    <string name="personal">Personal</string>
    <string name="total_days_active">Total days active</string>
    <string name="icon_of_time">Icon of time</string>
    <string name="reset_account">Reset account</string>
    <string name="delete_account">Delete account</string>
    <string name="total_amount_income">Total amount income</string>
    <string name="total_transaction_expense_count">Total transaction expense count</string>
    <string name="total_transaction_income_count">Total transaction income count</string>
    <string name="new_transaction">New transaction</string>
    <string name="enter_new_category">Enter new category</string>
    <string name="icon_of_category_light">Icon of category light</string>
    <string name="icon_of_amount_light">Icon of amount light</string>
    <string name="enter_new_amount">Enter new amount</string>
    <string name="icon_of_calendar_light">Icon of calendar light</string>
    <string name="new_settlement_date">New settlement date</string>
    <string name="new_settlement_time">New settlement time</string>
    <string name="new_frequency">New frequency</string>
    <string name="update">Update</string>
    <string name="edit_budget">Edit budget</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="new_transaction_date">New transaction date</string>
    <string name="new_transaction_time">New transaction time</string>
    <string name="old_passcode">Old passcode</string>
    <string name="new_passcode">New passcode (6 digits)</string>
    <string name="new_passcode_confirm">New passcode confirm</string>
    <string name="confirm">Confirm</string>
    <string name="change_phone">Change phone</string>
    <string name="old_phone">Old phone</string>
    <string name="new_phone">New phone</string>
    <string name="change_name">Change name</string>
    <string name="new_name">New name</string>
    <string name="logout">Logout</string>
    <string name="new_budget">New budget</string>
    <string name="percentage">Percentage</string>
    <string name="percentage_of_transaction">0 %</string>
    <string name="total_income_budgets">Total income budgets</string>
    <string name="total_expense_budgets">Total expense budgets</string>
    <string name="date_and_time">yyyy-mm-dd hh:mm</string>
    <string name="registration_successfully">Registration successfully</string>
    <string name="transactions_count">Transactions count</string>
    <string name="setting_background">Setting background</string>
    <string name="income_budget">Income budget</string>
    <string name="expense_budget">Expense budget</string>
    <string name="icon_of_note">Icon of note</string>
    <string name="note">Note</string>
    <string name="to_clear_note">To clear note</string>
    <string name="mm">MM</string>
    <string name="exchange_rates_for_usd">Exchange rates for USD</string>
    <string name="exchange_rate_icon">Exchange rate icon</string>
</resources>