<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/background_alert">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/sf_pro"
        android:gravity="center"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="10"
        android:text="Title"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/passcode_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:background="@drawable/background_edit_text_highlight"
        android:fontFamily="@font/sf_pro"
        android:hint="@string/passcode"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:paddingHorizontal="15dp"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:fontFamily="@font/sf_pro"
        android:backgroundTint="#000000"
        android:textColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="10"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:fontFamily="@font/sf_pro"
        android:backgroundTint="#646464"
        android:textColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="10"
        android:textSize="12sp"
        android:textStyle="bold"/>
</LinearLayout>
